--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ julia:
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("Geodesy"); Pkg.test("Geodesy"; coverage=true)'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("Geodesy"); Pkg.test("Geodesy"; coverage=true)'
+after_success:
+  - julia -e 'cd(Pkg.dir("Geodesy")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
