--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: julia
 os:
   - linux
 julia:
-  - release
+  - 0.5
+  - nightly
 notifications:
   email: false
+matrix:
+  allow_failures:
+    - julia: nightly
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("Geodesy"); Pkg.test("Geodesy"; coverage=true)'
