--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,11 @@ os:
   - linux
 julia:
   - 1.0
+  - 1
   - nightly
 notifications:
   email: false
 matrix:
   allow_failures:
     - julia: nightly
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia --check-bounds=yes -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("Geodesy"); Pkg.test("Geodesy"; coverage=true)'
-after_success:
-  - julia -e 'using Pkg; cd(Pkg.dir("Geodesy")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+coveralls: true
