--- a/Project.toml
+++ b/Project.toml
@@ -10,8 +10,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-CoordinateTransformations = "0.5"
-StaticArrays = "0.8, 0.9 0.10, 0.11, 0.12"
+CoordinateTransformations = "0.5, 0.6"
+StaticArrays = "0.8, 0.9, 0.10, 0.11, 0.12"
 julia = "1"
 
 [extras]
